--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<LINK href="css/styles.css" rel="stylesheet" type="text/css">
+<style>
+	body {
+</style>
 <title>NaGames</title>
 </head>
-<body class="GradientClass">
+<body>
 
 <h1 style="text-align: center";><img src="assets/logo.png" alt="description" width="100" height="100"/>NaGames</h1>
 <br>
