--- a/index.html
+++ b/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf-8">
+	<title>Animated Background</title>
+	<link rel="stylesheet" href="css/styles.css">
 <style>
-	body {
-  background-color: #4f4f4f;
-}
+	
 </style>
 <title>NaGames</title>
 </head>
 <body>
+	<div class="text">
+		Gradient background Animation
+	</div>
 
 <h1 style="text-align: center";><img src="assets/logo.png" alt="description" width="100" height="100"/>NaGames</h1>
 <br>
