--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
 <body>
 	<div class="text">
-		Gradient background Animation
+		NaGames
 	</div>
 
-<h1 style="text-align: center";><img src="assets/logo.png" alt="description" width="100" height="100"/>NaGames</h1>
+<img src="assets/logo.png" alt="description" width="100" height="100" style="padding: 10px" />
 <br>
 <p style="font: bold"; style="text-align: center;"><strong>Welcome to NaGames Official Website!</strong></p>
 
