--- a/index.html
+++ b/index.html
@@ -11,12 +11,11 @@
 </head>
 <body>
 	<div class="text">
-		NaGames
+		Welcome to NaGames Official Website!
 	</div>
 
-<img src="assets/logo.png" alt="description" width="100" height="100" style="padding: 10px" />
+<img src="assets/logo.png" alt="description" width="100" height="100" style="padding: 10px -20px" />
 <br>
-<p style="font: bold"; style="text-align: center;"><strong>Welcome to NaGames Official Website!</strong></p>
 
 </body>
 </html>
