--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 <title>NaGames</title>
 </head>
 <body>
+	<div class="text-center">
+  <img src="assets/logo.png" class="rounded" alt="Logo at top">
+</div>
 	<div class="text">
 		Welcome to NaGames Official Website!
 	</div>
