--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
 	<div class="text">
 		Welcome to NaGames Official Website!
 	</div>
-
-<img src="assets/logo.png" alt="description" width="100" height="100" style="padding: 10px -20px" />
+<p>Example</p>
 <br>
 
 </body>
