--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
 	<div class="text">
+		<img src="assets/logo.png"/>
 		Welcome to NaGames Official Website!
 	</div>
 <p>Example</p>
