--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Animated Background</title>
+	<title>NaGames</title>
 	<link rel="stylesheet" href="css/styles.css">
 <style>
 	
@@ -10,10 +10,16 @@
 <title>NaGames</title>
 </head>
 <body>
+
+	<div class="container">
+  <img src="assets/logo.png" alt="home">
+  <button class="btn">NaGames</button>
+	</div>
+
 	<div class="text">
-		<img src="assets/logo.png"/>
 		Welcome to NaGames Official Website!
 	</div>
+	
 <p>Example</p>
 <br>
 
