--- a/index.html
+++ b/index.html
@@ -11,15 +11,21 @@
 </head>
 <body>
 
-	<div class="container">
-  <img src="assets/logo.png" alt="home">
-  <button class="btn">NaGames</button>
+	<div class="loading">
+		<div class="obj"></div>
+		<div class="obj"></div>
+		<div class="obj"></div>
+		<div class="obj"></div>
+		<div class="obj"></div>
+		<div class="obj"></div>
+		<div class="obj"></div>
+		<div class="obj"></div>
 	</div>
 
 	<div class="text">
 		Welcome to NaGames Official Website!
 	</div>
-	
+
 <p>Example</p>
 <br>
 
