--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
 		<div class="obj"></div>
 	</div>
 
+	<script type="text/javascript">
+		window.addEventListener("load", function() {
+			const loading = document.querySelector(".loading")
+			loading.className += " hidden"; //makes clas name loadinghidden
+		})
+	</script>
+
 	<div class="text">
 		Welcome to NaGames Official Website!
 	</div>
