--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
 	<title>NaGames</title>
 	<link rel="stylesheet" href="css/styles.css">
-<style>
-	
-</style>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>NaGames</title>
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
 </head>
 <body>
 
@@ -24,6 +27,7 @@
 
 	<script type="text/javascript">
 		window.addEventListener("load", function() {
+			wait(1)
 			const loading = document.querySelector(".loading")
 			loading.className += " hidden"; //makes clas name loadinghidden
 		})
