--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@ body {
 		Welcome to NaGames Official Website!
 	</div>
 
+	<div class="footer">
+  <h2>Footer</h2>
+	</div>
+
 <p>Example</p>
 <br>
 
