--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="google icon" type="image/x-icon" href="assets/logo.png"/>
 	<meta charset="utf-8">
 	<title>NaGames</title>
 	<link rel="stylesheet" href="css/styles.css">
