--- a/index.html
+++ b/index.html
@@ -26,6 +26,21 @@ body {
 		<div class="obj"></div>
 	</div>
 
+	
+
+	<div class="text"><b>
+		Welcome to NaGames Official Website!
+	</b></div>
+
+	<p><b>Good Video Below!</b></p>>
+
+	<center><iframe width="520" height="445" src="https://www.youtube.com/embed/iHHB_-ce8Uw"></center>>
+</iframe>
+
+	<div class="footer">
+  <h2>Footer</h2>
+	</div>
+
 	<script type="text/javascript">
 		window.addEventListener("load", function() {
 			const loading = document.querySelector(".loading")
@@ -33,12 +48,5 @@ body {
 		})
 	</script>
 
-	<div class="text">
-		Welcome to NaGames Official Website!
-	</div>
-
-	<div class="footer">
-  <h2>Footer</h2>
-	</div>
 </body>
 </html>
