--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@ body {
 		Welcome to NaGames Official Website!
 	</b></div>
 
-	<p><b>Good Video Below!</b></p>>
+	<div class='vidPromote'><center><p><b>Good Video Below!</b></p></center></div>
+	
+	<div class="darrow"><img src="assets/darrow.gif" /></div>
 
 	<center><iframe width="520" height="445" src="https://www.youtube.com/embed/iHHB_-ce8Uw"></center>>
 </iframe>
