--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ body {
 	</b></div>
 
 	<div class='vidPromote'><center><p><b>Good Video Below!</b></p></center></div>
-	
-	<div class="darrow"><img src="assets/darrow.gif" /></div>
+
+	<div class="darrow"><img src="assets/darrow.gif" align="center" /></div>
 
 	<center><iframe width="520" height="445" src="https://www.youtube.com/embed/iHHB_-ce8Uw"></center>>
 </iframe>
