--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ body {
 </iframe>
 
 	<div class="footer">
-  <h2>Footer</h2>
+  <h2>Made by imwood04 / ZeroTwo#8676</h2>
 	</div>
 
 	<script type="text/javascript">
