Attempt 2 of Optimize

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@ body {
 
 	<center><img class="darrow" src="assets/darrow.gif"></center>
 
-	<div><center><iframe width="520" height="445" src="https://www.youtube.com/embed/iHHB_-ce8Uw" allowfullscreen="" frameborder="0"></center></iframe></div>
+	<div class="video">
+		<center><iframe width="520" height="445" src="https://www.youtube.com/embed/iHHB_-ce8Uw" allowfullscreen="" frameborder="0"></center></iframe>
+	</div>
 
 	<div class="footer">
   <h2>Made by imwood04 / ZeroTwo#8676</h2>
