--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ body {
 
 	
 
-	<div class="text"><b>
+	<div class="text" style="font-size:10vw"><b>
 		Welcome to NaGames Official Website!
 	</b></div>
 
