--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>NaGames</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 <title>NaGames</title>
 <style>
 body {
@@ -28,9 +29,24 @@ body {
 
 	
 
-	<div class="text" style="font-size:5vw"><b>
-		Welcome to NaGames Official Website!
-	</b></div>
+	<div class="header">
+    <h2 class="logo">NaGames</h2>
+    <input type="checkbox" id="chk">
+    <label for="chk" class="show-menu-btn">
+      <i class="fas fa-ellipsis-h"></i>
+    </label>
+
+    <ul class="menu">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Services</a>
+      <a href="#">Works</a>
+      <a href="#">Contact</a>
+      <label for="chk" class="hide-menu-btn">
+        <i class="fas fa-times"></i>
+      </label>
+    </ul>
+  </div>
 
 	<div class='vidPromote'><center><p><b>Good Video Below!</b></p></center></div>
 
