--- a/index.html
+++ b/index.html
@@ -16,19 +16,6 @@ body {
 </head>
 <body>
 
-	<div class="loading">
-		<div class="obj"></div>
-		<div class="obj"></div>
-		<div class="obj"></div>
-		<div class="obj"></div>
-		<div class="obj"></div>
-		<div class="obj"></div>
-		<div class="obj"></div>
-		<div class="obj"></div>
-	</div>
-
-	
-
 	<div class="header">
     <h2 class="logo">NaGames</h2>
     <input type="checkbox" id="chk">
@@ -37,16 +24,16 @@ body {
     </label>
 
     <ul class="menu">
-      <a href="#">Home</a>
+      <a href="https://nagames.herokuapp.com/">Home</a>
       <a href="#">About</a>
-      <a href="#">Services</a>
-      <a href="#">Works</a>
-      <a href="#">Contact</a>
+      <a href="https://discord.gg/UB3yCwX">Discord</a>
+      <a href="#">Social</a>
       <label for="chk" class="hide-menu-btn">
         <i class="fas fa-times"></i>
       </label>
     </ul>
   </div>
+
 
 	<div class='vidPromote'><center><p><b>Good Video Below!</b></p></center></div>
 
@@ -60,12 +47,6 @@ body {
   <h2>Made by imwood04 / ZeroTwo#8676</h2>
 	</div>
 
-	<script type="text/javascript">
-		window.addEventListener("load", function() {
-			const loading = document.querySelector(".loading")
-			loading.className += " hidden"; //makes clas name loadinghidden
-		})
-	</script>
 
 </body>
 </html>
