Menu Page Update

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ body {
       <a href="https://nagames.herokuapp.com/">Home</a>
       <a href="#">About</a>
       <a href="https://discord.gg/UB3yCwX">Discord</a>
-      <a href="#">Social</a>
+      <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
       <label for="chk" class="hide-menu-btn">
         <i class="fas fa-times"></i>
       </label>
