--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ body {
 
     <ul class="menu">
       <a href="https://nagames.herokuapp.com/">Home</a>
-      <a href="#">About</a>
+      <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
       <a href="https://discord.gg/UB3yCwX">Discord</a>
       <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
       <label for="chk" class="hide-menu-btn">
