About Us Page Update

--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -10,6 +10,7 @@
 <title>NaGames Social</title>
 <style>
 body {
+  background-color: #c9c9c9;
   font-family: Arial, Helvetica, sans-serif;
 }
 </style>
@@ -34,7 +35,10 @@ body {
     </ul>
   </div>
 
-  
+<p><center><b style="font: bold; font-size: 30px;">About NaGames</b></center></p>
+<p style="font-size: 20px;"> -- So We have been around for a while in discord I imwood04 created this site to help spread the community.<br>
+ -- Nagames was created for my Minecraft server I owned for my YouTube Channel But, I don't really upload very often.<br> -- Anyways NaGames still has much to offer a discord with almost 200 Members!<br>
+  -- We talk and do events sometimes. Feel Free To Join!</p>
 
 	<div class="footer">
   <h2>Made by imwood04 / ZeroTwo#8676</h2>
