--- a/index.html
+++ b/index.html
@@ -34,14 +34,7 @@ body {
     </ul>
   </div>
 
-
-	<div class='vidPromote'><center><p><b>Good Video Below!</b></p></center></div>
-
-	<center><img class="darrow" src="assets/darrow.gif"></center>
-
-	<div class="video">
-		<center><iframe width="520" height="445" src="https://www.youtube.com/embed/iHHB_-ce8Uw" allowfullscreen="" frameborder="0"></center></iframe>
-	</div>
+<center><p style="font-size: 30px;"><b>Welcome To NaGames Official Website!</b></p></center>
 
 	<div class="footer">
   <h2>Made by imwood04 / ZeroTwo#8676</h2>
