--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -34,7 +34,7 @@ body {
     </ul>
   </div>
 
-  <iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+  <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
 
 	<div class="footer">
   <h2>Made by imwood04 / ZeroTwo#8676</h2>
