--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -16,6 +16,10 @@ body {
 </head>
 <body>
 
+  <div class="background">
+  <div class="blur"></div>
+  </div>
+
 	<div class="header">
     <h2 class="logo">NaGames Social</h2>
     <input type="checkbox" id="chk">
