--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -16,10 +16,6 @@ body {
 </head>
 <body>
 
-  <div class="background">
-  <div class="blur"></div>
-  </div>
-
 	<div class="header">
     <h2 class="logo">NaGames Social</h2>
     <input type="checkbox" id="chk">
@@ -36,14 +32,25 @@ body {
         <i class="fas fa-times"></i>
       </label>
     </ul>
+
+    <div class="page">
+      <div class="socialLogo">
+        <ul>
+          <center>
+            <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" height="100" alt="YouTube" src="assets/youtube.png"></a>
+            <a href="https://twitter.com/imwood04"><img class="twit" height="75" alt="Twitter" src="assets/twitter.png"></a>
+            <a href="https://discord.gg/UB3yCwX"><img class="disc" height="100" alt="Discord" src="assets/Discord.png"></a>
+          </center>
+        </ul>
+      </div>
+
+      <div class="sidebar">
+       The YouTube Button is not for NaGames but at the same time it is. Its my personal youtube account that I upload on but NaGames is for my YouTube.
+      </div>
+      <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
+    </div>
+
+    <div class='footer'>Made by imwood04 / ZeroTwo#8676</div>
   </div>
-
-  <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
-
-	<div class="footer">
-  <h2>Made by imwood04 / ZeroTwo#8676</h2>
-	</div>
-
-
 </body>
 </html>
