--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="lazysizes.min.js" async=""></script>
 	<link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
 	<meta charset="utf-8">
 	<title>NaGames</title>
