--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <script src="lazysizes.min.js" async=""></script>
 	<link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
 	<meta charset="utf-8">
 	<title>NaGames Social</title>
@@ -37,9 +38,9 @@ body {
       <div class="socialLogo">
         <ul>
           <center>
-            <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" height="100" alt="YouTube" src="assets/youtube.png"></a>
-            <a href="https://twitter.com/imwood04"><img class="twit" height="75" alt="Twitter" src="assets/twitter.png"></a>
-            <a href="https://discord.gg/UB3yCwX"><img class="disc" height="100" alt="Discord" src="assets/Discord.png"></a>
+            <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" height="100" alt="YouTube" data-src="assets/youtube.png"></a>
+            <a href="https://twitter.com/imwood04"><img class="twit" height="75" alt="Twitter" data-src="assets/twitter.png"></a>
+            <a href="https://discord.gg/UB3yCwX"><img class="disc" height="100" alt="Discord" data-src="assets/Discord.png"></a>
           </center>
         </ul>
       </div>
@@ -47,7 +48,7 @@ body {
       <div class="sidebar">
        The YouTube Button is not for NaGames but at the same time it is. Its my personal youtube account that I upload on but NaGames is for my YouTube.
       </div>
-      <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
+      <div class="discwid"><iframe data-src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
     </div>
 
     <div class='footer'>Made by imwood04 / ZeroTwo#8676</div>
