--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -1,53 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
-	<meta charset="utf-8">
-	<title>NaGames Social</title>
-	<link rel="stylesheet" href="css/styles.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-<title>NaGames Social</title>
-<style>
-body {
-  background-color: #c9c9c9;
-  font-family: Arial, Helvetica, sans-serif;
-}
-</style>
-</head>
-<body>
-
-	<div class="header">
-    <h2 class="logo">NaGames About-Us!</h2>
-    <input type="checkbox" id="chk">
-    <label for="chk" class="show-menu-btn">
-      <i class="fas fa-ellipsis-h"></i>
-    </label>
-
-    <ul class="menu">
-      <a href="https://nagames.herokuapp.com/">Home</a>
-      <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
-      <a href="https://discord.gg/UB3yCwX">Discord</a>
-      <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
-      <label for="chk" class="hide-menu-btn">
-        <i class="fas fa-times"></i>
-      </label>
-    </ul>
-  </div>
-
-<p><center><b style="font: bold; font-size: 30px;">About NaGames</b></center></p>
-<p><center style="font-size: 20px">  -- So We have been around for a while in discord I imwood04 created this site to help spread the community.<br><br>
-
-  -- Nagames was created for my Minecraft server I owned for my YouTube Channel But, I don't really upload very often.<br><br>
-  -- Anyways NaGames still has much to offer a discord with almost 200 Members!<br><br>
- 
-    -- We talk and do events sometimes. Feel Free To Join!</p></center>
-
-
-	<div class="footer">
-  <h2>Made by imwood04 / ZeroTwo#8676</h2>
-	</div>
-
-
-</body>
+   <head>
+      <link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
+      <meta charset="utf-8">
+      <title>NaGames Social</title>
+      <link rel="stylesheet" href="css/styles.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+      <title>NaGames Social</title>
+      <style>
+         body {
+         background-color: #c9c9c9;
+         font-family: Arial, Helvetica, sans-serif;
+         }
+      </style>
+   </head>
+   <body>
+      <div class="header">
+         <h2 class="logo">NaGames About-Us!</h2>
+         <input type="checkbox" id="chk">
+         <label for="chk" class="show-menu-btn">
+         <i class="fas fa-ellipsis-h"></i>
+         </label>
+         <ul class="menu">
+            <a href="https://nagames.herokuapp.com/">Home</a>
+            <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
+            <a href="https://discord.gg/UB3yCwX">Discord</a>
+            <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
+            <label for="chk" class="hide-menu-btn">
+            <i class="fas fa-times"></i>
+            </label>
+         </ul>
+      </div>
+      <p>
+      <center><b style="font: bold; font-size: 30px;">About NaGames</b></center>
+      </p>
+      <p>
+      <center style="font-size: 20px">  -- So We have been around for a while in discord I imwood04 created this site to help spread the community.<br><br>
+         -- Nagames was created for my Minecraft server I owned for my YouTube Channel But, I don't really upload very often.<br><br>
+         -- Anyways NaGames still has much to offer a discord with almost 200 Members!<br><br>
+         -- We talk and do events sometimes. Feel Free To Join!</p>
+      </center>
+      <div class="footer">
+         <h2>Made by imwood04 / ZeroTwo#8676</h2>
+      </div>
+   </body>
 </html>
