--- a/index.html
+++ b/index.html
@@ -1,46 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <script src="scripts/lazysizes.min.js" async=""></script>
-	<link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
-	<meta charset="utf-8">
-	<title>NaGames</title>
-	<link rel="stylesheet" href="css/styles.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-<title>NaGames</title>
-<style>
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
-</style>
-</head>
-<body>
-
-	<div class="header">
-    <h2 class="logo">NaGames</h2>
-    <input type="checkbox" id="chk">
-    <label for="chk" class="show-menu-btn">
-      <i class="fas fa-ellipsis-h"></i>
-    </label>
-
-    <ul class="menu">
-      <a href="https://nagames.herokuapp.com/">Home</a>
-      <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
-      <a href="https://discord.gg/UB3yCwX">Discord</a>
-      <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
-      <label for="chk" class="hide-menu-btn">
-        <i class="fas fa-times"></i>
-      </label>
-    </ul>
-  </div>
-
-<center><p style="font-size: 30px;"><b>Welcome To NaGames Official Website!</b></p></center>
-
-	<div class="footer">
-  <h2>Made by imwood04 / ZeroTwo#8676</h2>
-	</div>
-
-
-</body>
+   <head>
+      <link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
+      <meta charset="utf-8">
+      <title>NaGames</title>
+      <link rel="stylesheet" href="css/styles.css">
+      <meta name="viewport" content="width=device-width, initial-scale=1">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+      <title>NaGames</title>
+      <style>
+         body {
+         font-family: Arial, Helvetica, sans-serif;
+         }
+      </style>
+   </head>
+   <body>
+      <div class="header">
+         <h2 class="logo">NaGames</h2>
+         <input type="checkbox" id="chk">
+         <label for="chk" class="show-menu-btn">
+         <i class="fas fa-ellipsis-h"></i>
+         </label>
+         <ul class="menu">
+            <a href="https://nagames.herokuapp.com/">Home</a>
+            <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
+            <a href="https://discord.gg/UB3yCwX">Discord</a>
+            <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
+            <label for="chk" class="hide-menu-btn">
+            <i class="fas fa-times"></i>
+            </label>
+         </ul>
+      </div>
+      <center>
+         <p style="font-size: 30px;"><b>Welcome To NaGames Official Website!</b></p>
+      </center>
+      <div class="footer">
+         <h2>Made by imwood04 / ZeroTwo#8676</h2>
+      </div>
+   </body>
 </html>
