--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -43,9 +43,15 @@
             <div class="sidebar">
                The YouTube Button is not for NaGames but at the same time it is. Its my personal youtube account that I upload on but NaGames is for my YouTube.
             </div>
-            <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
          </div>
          <div class='footer'>Made by imwood04 / ZeroTwo#8676</div>
       </div>
+      <div class="discwid">
+        <iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark"
+       style="width:20%; height:500px;
+        allowtransparency="true"
+         frameborder="0"
+          sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
+          </iframe></div>
    </body>
 </html>
