Slightly Better Mobile
Still Pretty bad xD

--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -1,57 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
-      <meta charset="utf-8">
-      <title>NaGames Social</title>
-      <link rel="stylesheet" href="css/styles.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-      <title>NaGames Social</title>
-      <style>
-         body {
-         font-family: Arial, Helvetica, sans-serif;
-         }
-      </style>
-   </head>
-   <body>
-      <div class="header">
-         <h2 class="logo">NaGames Social</h2>
-         <input type="checkbox" id="chk">
-         <label for="chk" class="show-menu-btn">
-         <i class="fas fa-ellipsis-h"></i>
-         </label>
-         <ul class="menu">
-            <a href="https://nagames.herokuapp.com/">Home</a>
-            <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
-            <a href="https://discord.gg/UB3yCwX">Discord</a>
-            <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
-            <label for="chk" class="hide-menu-btn">
-            <i class="fas fa-times"></i>
-            </label>
-         </ul>
-         <div class="page">
-            <div class="socialLogo">
-               <ul>
-                  <center>
-                     <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" height="100" alt="YouTube" src="assets/youtube.png"></a>
-                     <a href="https://twitter.com/imwood04"><img class="twit" height="75" alt="Twitter" src="assets/twitter.png"></a>
-                     <a href="https://discord.gg/UB3yCwX"><img class="disc" height="100" alt="Discord" src="assets/Discord.png"></a>
-                  </center>
-               </ul>
-            </div>
-            <div class="sidebar">
-               The YouTube Button is not for NaGames but at the same time it is. Its my personal youtube account that I upload on but NaGames is for my YouTube.
-            </div>
-         </div>
-         <div class='footer'>Made by imwood04 / ZeroTwo#8676</div>
+<head>
+	<link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
+	<meta charset="utf-8">
+	<title>NaGames Social</title>
+	<link rel="stylesheet" href="css/styles.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+<title>NaGames Social</title>
+<style>
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+</style>
+</head>
+<body>
+
+	<div class="header">
+    <h2 class="logo">NaGames Social</h2>
+    <input type="checkbox" id="chk">
+    <label for="chk" class="show-menu-btn">
+      <i class="fas fa-ellipsis-h"></i>
+    </label>
+
+    <ul class="menu">
+      <a href="https://nagames.herokuapp.com/">Home</a>
+      <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
+      <a href="https://discord.gg/UB3yCwX">Discord</a>
+      <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
+      <label for="chk" class="hide-menu-btn">
+        <i class="fas fa-times"></i>
+      </label>
+    </ul>
+
+    <div class="page">
+      <div class="socialLogo">
+        <ul>
+          <center>
+            <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" height="100" alt="YouTube" src="assets/youtube.png"></a>
+            <a href="https://twitter.com/imwood04"><img class="twit" height="75" alt="Twitter" src="assets/twitter.png"></a>
+            <a href="https://discord.gg/UB3yCwX"><img class="disc" height="100" alt="Discord" src="assets/Discord.png"></a>
+          </center>
+        </ul>
       </div>
-      <div class="discwid">
-        <iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark"
-       style="width:20%; height:500px;
-        allowtransparency="true"
-         frameborder="0"
-          sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts">
-          </iframe></div>
-   </body>
+
+      <div class="sidebar">
+       The YouTube Button is not for NaGames but at the same time it is. Its my personal youtube account that I upload on but NaGames is for my YouTube.
+      </div>
+      <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" style="width: 40%; height: 75vh;" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
+    </div>
+
+    <div class='footer'>Made by imwood04 / ZeroTwo#8676</div>
+  </div>
+</body>
 </html>
