Social Page Almost Fixed
Almost fixed it now i just need my x to come back and change background

--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -6,7 +6,6 @@
 	<title>NaGames Social</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 <title>NaGames Social</title>
 <style>
 body {
@@ -37,9 +36,9 @@ body {
       <div class="socialLogo">
         <ul>
           <center>
-            <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" height="100" alt="YouTube" src="assets/youtube.png"></a>
-            <a href="https://twitter.com/imwood04"><img class="twit" height="75" alt="Twitter" src="assets/twitter.png"></a>
-            <a href="https://discord.gg/UB3yCwX"><img class="disc" height="100" alt="Discord" src="assets/Discord.png"></a>
+            <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" style="height: 100px" alt="YouTube" src="assets/youtube.png"></a>
+            <a href="https://twitter.com/imwood04"><img class="twit" style="height: 75px" alt="Twitter" src="assets/twitter.png"></a>
+            <a href="https://discord.gg/UB3yCwX"><img class="disc" style="height: 100px" alt="Discord" src="assets/Discord.png"></a>
           </center>
         </ul>
       </div>
@@ -47,7 +46,6 @@ body {
       <div class="sidebar">
        The YouTube Button is not for NaGames but at the same time it is. Its my personal youtube account that I upload on but NaGames is for my YouTube.
       </div>
-      <div class="discwid"><iframe src="https://discordapp.com/widget?id=368865413045420043&theme=dark" style="width: 40%; height: 75vh;" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe></div>
     </div>
 
     <div class='footer'>Made by imwood04 / ZeroTwo#8676</div>
