--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -6,6 +6,7 @@
 	<title>NaGames Social</title>
 	<link rel="stylesheet" href="css/styles.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
 <title>NaGames Social</title>
 <style>
 body {
