--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -36,9 +36,9 @@
       <center><b style="font: bold; font-size: 30px;">About NaGames</b></center>
       </p>
       <p>
-      <center style="font-size: 20px">  -- So We have been around for a while in discord I imwood04 created this site to help spread the community.<br><br>
-         -- Nagames was created for my Minecraft server I owned for my YouTube Channel But, I don't really upload very often.<br><br>
-         -- Anyways NaGames still has much to offer a discord with almost 200 Members!<br><br>
+      <center style="font-size: 20px">  -- We have been around for a while in discord I imwood04 created this site to help spread the community.<br><br>
+         -- Nagames was created for my Minecraft server I owned for my YouTube channel but, I don't really upload very often.<br><br>
+         -- NaGames still has much to offer a discord with almost 200 Members!<br><br>
          -- We talk and do events sometimes. Feel Free To Join!</p>
       </center>
       <div class="footer">
