--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
          <i class="fas fa-ellipsis-h"></i>
          </label>
          <ul class="menu">
-            <a href="https://nagames.herokuapp.com/">Home</a>
+            <a href="https://nagames.herokuapp.com/" span title="Home Page">Home</a>
             <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html" span title="About us">About</a>
             <a href="https://discord.gg/UB3yCwX" span title="Join our discord!">Discord</a>
             <a href="https://nagames.herokuapp.com/pages/social/social.html" span title="Our social links!">Social</a>
