--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -23,10 +23,10 @@
          <i class="fas fa-ellipsis-h"></i>
          </label>
          <ul class="menu">
-            <a href="https://nagames.herokuapp.com/">Home</a>
-            <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html">About</a>
-            <a href="https://discord.gg/UB3yCwX">Discord</a>
-            <a href="https://nagames.herokuapp.com/pages/social/social.html">Social</a>
+            <a href="https://nagames.herokuapp.com/" span title="Home Page">Home</a>
+            <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html" span title="About us">About</a>
+            <a href="https://discord.gg/UB3yCwX" span title="Join our discord!">Discord</a>
+            <a href="https://nagames.herokuapp.com/pages/social/social.html" span title="Our social links!">Social</a>
             <label for="chk" class="hide-menu-btn">
             <i class="fas fa-times"></i>
             </label>
