--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -38,7 +38,7 @@
                <ul>
                   <center>
                      <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" style="height: 100px" alt="YouTube" src="assets/youtube.png"></a>
-                     <a href="https://twitter.com/imwood04"><img class="twit" style="height: 75px" alt="Twitter" src="assets/twitter.png"></a>
+                     <a href="https://twitter.com/imwood04"><img class="twit" style="height: 75px" alt="Twitter" src="./assets/twitter.png"></a>
                      <a href="https://discord.gg/UB3yCwX"><img class="disc" style="height: 100px" alt="Discord" src="assets/Discord.png"></a>
                   </center>
                </ul>
