--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
+      <link rel="google icon" type="image/x-icon" href="../../assets/biggerLogo.png" />
       <meta charset="utf-8">
       <title>NaGames Social</title>
       <link rel="stylesheet" href="css/styles.css">
