--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
    <head>
-      <link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
+      <link rel="google icon" type="image/x-icon" href="../../assets/biggerLogo.png" />
       <meta charset="utf-8">
       <title>NaGames Social</title>
       <link rel="stylesheet" href="css/styles.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
+      <script src="../../jquery-3.5.1.min.js"></script>
       <style>
          body {
          font-family: Arial, Helvetica, sans-serif;
