--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
    </head>
    <body>
       <div class="header">
+         <img class="logo" src="assets/logo.png">
          <h2 class="logo">NaGames</h2>
          <input type="checkbox" id="chk">
          <label for="chk" class="show-menu-btn">
