--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -3,12 +3,11 @@
    <head>
       <link rel="google icon" type="image/x-icon" href="../../assets/biggerLogo.png" />
       <meta charset="utf-8">
-      <title>NaGames Social</title>
+      <title>NaGames About-Us</title>
       <link rel="stylesheet" href="css/styles.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
       <script src="../../jquery-3.5.1.min.js"></script>
-      <title>NaGames Social</title>
       <style>
          body {
          background-color: #c9c9c9;
