--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+      <script src="../../scripts/jquery-3.5.1.js"></script>
+      <script src="../../scripts/recliner.js"></script>
    <head>
       <link rel="google icon" type="image/x-icon" href="../../assets/biggerLogo.png" />
       <meta charset="utf-8">
@@ -7,7 +9,6 @@
       <link rel="stylesheet" href="css/styles.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-      <script src="../../jquery-3.5.1.min.js"></script>
       <style>
          body {
          font-family: Arial, Helvetica, sans-serif;
@@ -39,9 +40,9 @@
       <div class="socialLogo">
          <ul>
             <center>
-               <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" style="height: 100px" alt="YouTube" src="../../assets/youtube.png" loading="lazy"></a>
-               <a href="https://twitter.com/imwood04" loading="lazy"><img class="twit" style="height: 75px" alt="Twitter" src="../../assets/twitter.png" loading="lazy"></a>
-               <a href="https://discord.gg/UB3yCwX"><img class="disc" style="height: 100px" alt="Discord" src="../../assets/Discord.png" loading="lazy"></a>
+               <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" style="height: 100px" alt="YouTube" src="../../assets/youtube.png"></a>
+               <a href="https://twitter.com/imwood04"><img class="twit" style="height: 75px" alt="Twitter" src="../../assets/twitter.png"></a>
+               <a href="https://discord.gg/UB3yCwX"><img class="disc" style="height: 100px" alt="Discord" src="../../assets/Discord.png"></a>
             </center>
          </ul>
       </div>
