--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
          </ul>
       </div>
       <center>
-         <p style="font-size: 30px;"><b>Welcome To NaGames Official Website!</b></p>
+         <p class="welcome"><b>Welcome To NaGames Official Website!</b></p>
       </center>
       <div class="footer">
          <h2>Made by imwood04 / ZeroTwo#8676</h2>
