--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="css/styles.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-      <script src="jquery-3.5.1.min.js"></script>
+      <script src="scripts/jquery-3.5.1.js"></script>
       <title>NaGames</title>
       <style>
          body {
@@ -17,7 +17,7 @@
    </head>
    <body>
       <div class="header">
-         <img class="logo" src="assets/logo.png">
+         <img class="logo" src="assets/logo.png" alt="Logo">
          <h2 class="logo">NaGames</h2>
          <input type="checkbox" id="chk">
          <label for="chk" class="show-menu-btn">
@@ -33,9 +33,9 @@
             </label>
          </ul>
       </div>
-      <center>
+      <div style="text-align: center;">
          <p class="welcome"><b>Welcome To NaGames Official Website!</b></p>
-      </center>
+      </div>
       <div class="footer">
          <h2>Made by imwood04 / ZeroTwo#8676</h2>
       </div>
