Redid depicted code

--- a/pages/social/social.html
+++ b/pages/social/social.html
@@ -15,12 +15,11 @@
          }
       </style>
    </head>
-   <body>
       <div class="header">
          <h2 class="logo">NaGames Social</h2>
          <input type="checkbox" id="chk">
          <label for="chk" class="show-menu-btn">
-         <i class="fas fa-ellipsis-h"></i>
+            <i class="fas fa-ellipsis-h"></i>
          </label>
          <!--Menu Buttons-->
          <ul class="menu">
@@ -29,7 +28,7 @@
             <a href="https://discord.gg/UB3yCwX" span title="Join our discord!" target="_blank">Discord</a>
             <a href="https://nagames.herokuapp.com/pages/social/social.html" span title="Our social links!">Social</a>
             <label for="chk" class="hide-menu-btn">
-            <i class="fas fa-times"></i>
+               <i class="fas fa-times"></i>
             </label>
          </ul>
          <div class="page">
@@ -39,12 +38,11 @@
       <!--Social Media Icon Buttons-->
       <div class="socialLogo">
          <ul>
-            <center>
+            <div style="text-align: center;">
                <a href="https://www.youtube.com/channel/UCxY7FPVjhflBVA1AH8loQmA?view_as=subscriber"><img class="yt" style="height: 100px" alt="YouTube" src="../../assets/youtube.png"></a>
                <a href="https://twitter.com/imwood04"><img class="twit" style="height: 75px" alt="Twitter" src="../../assets/twitter.png"></a>
                <a href="https://discord.gg/UB3yCwX"><img class="disc" style="height: 100px" alt="Discord" src="../../assets/Discord.png"></a>
-            </center>
+            </div>
          </ul>
       </div>
-   </body>
 </html>
