--- a/pages/aboutUs/aboutUs.html
+++ b/pages/aboutUs/aboutUs.html
@@ -7,7 +7,7 @@
       <link rel="stylesheet" href="css/styles.css">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-      <script src="../../jquery-3.5.1.min.js"></script>
+      <script src="../../scripts/jquery-3.5.1.js"></script>
       <style>
          body {
          background-color: #c9c9c9;
@@ -33,16 +33,15 @@
          </ul>
       </div>
       <p>
-      <center><b style="font: bold; font-size: 30px;">About NaGames</b></center>
-      </p>
+      <div style="text-align: center;"><b style=" font-size: 30px;">About NaGames</b></div>
       <p>
-      <center style="font-size: 20px">  -- We have been around for a while in discord I imwood04 created this site to help spread the community.<br><br>
+      <div style="font-size: 20px; text-align: center;">  -- We have been around for a while in discord I imwood04 created this site to help spread the community.<br><br>
          -- Nagames was created for my Minecraft server I owned for my YouTube channel but, I don't really upload very often.<br><br>
          -- NaGames still has much to offer a discord with almost 200 Members!<br><br>
-         -- We talk and do events sometimes. Feel Free To Join!</p>
-      </center>
+         -- We talk and do events sometimes. Feel Free To Join!
       <div class="footer">
          <h2>Made by imwood04 / ZeroTwo#8676</h2>
+      </div>
       </div>
    </body>
 </html>
