--- a/index.html
+++ b/index.html
@@ -1,43 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <link rel="google icon" type="image/x-icon" href="assets/biggerLogo.png" />
-      <meta charset="utf-8">
-      <title>NaGames</title>
-      <link rel="stylesheet" href="css/styles.css">
-      <meta name="viewport" content="width=device-width, initial-scale=1">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css">
-      <script src="scripts/jquery-3.5.1.js"></script>
-      <title>NaGames</title>
-      <style>
-         body {
-         font-family: Arial, Helvetica, sans-serif;
-         }
-      </style>
-   </head>
-   <body>
-      <div class="header">
-         <img class="logo" src="assets/logo.png" alt="Logo">
-         <h2 class="logo">NaGames</h2>
-         <input type="checkbox" id="chk">
-         <label for="chk" class="show-menu-btn">
-         <i class="fas fa-ellipsis-h"></i>
-         </label>
-         <ul class="menu">
-            <a href="https://nagames.herokuapp.com/" span title="Home Page">Home</a>
-            <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html" span title="About us">About</a>
-            <a href="https://discord.gg/UB3yCwX" span title="Join our discord!" target="_blank">Discord</a>
-            <a href="https://nagames.herokuapp.com/pages/social/social.html" span title="Our social links!">Social</a>
-            <label for="chk" class="hide-menu-btn">
+<head>
+    <link href="assets/biggerLogo.png" rel="google icon" type="image/x-icon"/>
+    <meta charset="utf-8">
+    <title>NaGames</title>
+    <link href="css/styles.css" rel="stylesheet">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
+    <script src="scripts/jquery-3.5.1.js"></script>
+    <title>NaGames</title>
+    <style>
+        body {
+            font-family: Arial, Helvetica, sans-serif;
+        }
+    </style>
+</head>
+<body>
+<div class="header">
+    <img alt="Logo" class="logo" src="assets/logo.png">
+    <h2 class="logo">NaGames</h2>
+    <input id="chk" type="checkbox">
+    <label class="show-menu-btn" for="chk">
+        <i class="fas fa-ellipsis-h"></i>
+    </label>
+    <ul class="menu">
+        <a href="https://nagames.herokuapp.com/" span title="Home Page">Home</a>
+        <a href="https://nagames.herokuapp.com/pages/aboutUs/aboutUs.html" span title="About us">About</a>
+        <a href="https://discord.gg/UB3yCwX" span target="_blank" title="Join our discord!">Discord</a>
+        <a href="https://nagames.herokuapp.com/pages/social/social.html" span title="Our social links!">Social</a>
+        <label class="hide-menu-btn" for="chk">
             <i class="fas fa-times"></i>
-            </label>
-         </ul>
-      </div>
-      <div style="text-align: center;">
-         <p class="welcome"><b>Welcome To NaGames Official Website!</b></p>
-      </div>
-      <div class="footer">
-         <h2>Made by imwood04 / ZeroTwo#8676</h2>
-      </div>
-   </body>
+        </label>
+    </ul>
+</div>
+<div style="text-align: center;">
+    <p class="welcome"><b>Welcome To NaGames Official Website!</b></p>
+</div>
+<div class="footer">
+    <h2>Made by imwood04 / ZeroTwo#8676</h2>
+</div>
+</body>
 </html>
